kubernetes/wlp/wlp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wlp
spec:
  selector:
    matchLabels:
      app: wlp
  replicas: 1
  template:
    metadata:
      labels:
        app: wlp
    spec:
      containers:
        - name: wlp
          image: yurak/wlp:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
          resources:
            limits:
              memory: 600Mi
              cpu: 500m
            requests:
              memory: 100Mi
              cpu: 100m
          livenessProbe:
            httpGet:
              port: 9080
              path: /spring/actuator/health/liveness
            initialDelaySeconds: 300
            periodSeconds: 10
            failureThreshold: 5
            timeoutSeconds: 30
          readinessProbe:
            httpGet:
              port: 9080
              path: /spring/actuator/health/readiness
            initialDelaySeconds: 300
            periodSeconds: 30
          volumeMounts:
            - name: wlp-config-volume
              mountPath: /config/jvm.options
              subPath: jvm-options
      volumes:
        - name: wlp-config-volume
          configMap:
            name: wlp-configmap
