kubernetes/wlp/wlp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wlp
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "9080"
spec:
  type: ClusterIP
  selector:
    app: wlp
  ports:
    - protocol: TCP
      port: 9080
