kubernetes/wlp/wlp-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wlp
spec:
  rules:
    - host: wlp.minikube
      http:
        paths:
          - path: /
            backend:
              serviceName: wlp
              servicePort: 9080
